cmake_minimum_required (VERSION 3.8)

project (Chat_Server VERSION 0.0.1 LANGUAGES CXX)

set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)

set (FOLDER_NAME ${ARCH}-${CMAKE_BUILD_TYPE})

set (CMAKE_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME})
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME}/lib)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME}/lib)

add_subdirectory (external)
add_subdirectory (server)